--- a/app/src/main/res/layout/routes_itemview.xml
+++ b/app/src/main/res/layout/routes_itemview.xml
@@ -65,8 +65,8 @@
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:onClick="button_done"
-            android:text="@string/button_done"
+            android:onClick="button_complete"
+            android:text="@string/button_complete"
             android:textSize="16sp" />
 
         <Button
