--- a/app/src/main/res/layout/content_routes_detail.xml
+++ b/app/src/main/res/layout/content_routes_detail.xml
@@ -11,35 +11,6 @@
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context=".RoutesDetailActivity"
     tools:showIn="@layout/activity_routes_detail">
-
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Customer:" />
-    <TextView
-        android:id="@+id/detail_name"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Customer Name"
-        android:textSize="20sp"
-        android:layout_margin="20dp"
-        android:textColor="@android:color/black"
-        />
-
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Address:" />
-    <TextView
-        android:id="@+id/detail_addr"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Customer Address"
-        android:textSize="20sp"
-        android:layout_margin="20dp"
-        android:textColor="@android:color/black"
-        />
-
     <TableLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
@@ -76,11 +47,52 @@
                 android:textSize="16sp" />
 
         </TableRow>
+        <TableRow>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Customer:" />
+            <TextView
+                android:id="@+id/detail_name"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Customer Name"
+                android:textSize="20sp"
+                android:layout_margin="20dp"
+                android:textColor="@android:color/black"
+                />
+
+
+        </TableRow>
+
+        <TableRow>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Address:" />
+            <TextView
+                android:id="@+id/detail_addr"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Customer Address"
+                android:textSize="20sp"
+                android:layout_margin="20dp"
+                android:textColor="@android:color/black"
+                />
+
+
+        </TableRow>
 
 
 
 
     </TableLayout>
+
+
+
+
+
+
 
 
 
