--- a/app/src/main/res/layout/content_routes_detail.xml
+++ b/app/src/main/res/layout/content_routes_detail.xml
@@ -4,21 +4,57 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="vertical"
-    android:padding="20dp"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:padding="20dp"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context=".RoutesDetailActivity"
     tools:showIn="@layout/activity_routes_detail">
-    <TableLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
+
+    <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_gravity="center_vertical"
         android:layout_weight="1"
         android:shrinkColumns="1"
-        android:stretchColumns="1" >
+        android:stretchColumns="1">
+
+        <TableRow>
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Customer:" />
+
+            <TextView
+                android:id="@+id/detail_name"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="20dp"
+                android:text="Customer Name"
+                android:textColor="@android:color/black"
+                android:textSize="20sp" />
+
+        </TableRow>
+
+        <TableRow>
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Address:" />
+
+            <TextView
+                android:id="@+id/detail_addr"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="20dp"
+                android:text="Customer Address"
+                android:textColor="@android:color/black"
+                android:textSize="20sp" />
+
+        </TableRow>
 
         <TableRow>
 
@@ -47,53 +83,7 @@
                 android:textSize="16sp" />
 
         </TableRow>
-        <TableRow>
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Customer:" />
-            <TextView
-                android:id="@+id/detail_name"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Customer Name"
-                android:textSize="20sp"
-                android:layout_margin="20dp"
-                android:textColor="@android:color/black"
-                />
-
-
-        </TableRow>
-
-        <TableRow>
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Address:" />
-            <TextView
-                android:id="@+id/detail_addr"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Customer Address"
-                android:textSize="20sp"
-                android:layout_margin="20dp"
-                android:textColor="@android:color/black"
-                />
-
-
-        </TableRow>
-
-
-
 
     </TableLayout>
-
-
-
-
-
-
-
-
 
 </LinearLayout>
