--- a/app/src/main/res/layout/routes_itemview.xml
+++ b/app/src/main/res/layout/routes_itemview.xml
@@ -13,7 +13,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:padding="6dp">
+        android:padding="6dp"
+        android:background="@color/colorButton">
 
         <TextView
             android:id="@+id/itemview_custname"
